# Schedy

./: .gitignore  404.html  LICENSE  README.md  environment.yml  index.html  mkdocs.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml
PRD/: index.html
architecture/: index.html
backend/: launcher.py  pyproject.toml
backend/schedy/: __init__.py  api.py  archive.py  calendar_engine.py  catalog.py  catalog_io.py  domain.py  evaluator.py  exporters.py  model_builder.py  parser.py  sample_data.py  solver.py  store.py  validator.py
backend/tests/: test_api.py  test_archive.py  test_calendar_engine.py  test_catalog.py  test_catalog_io.py  test_evaluator.py  test_exporters.py  test_parser_validator.py  test_solver.py
constraints/: index.html
docs/: PRD.md  architecture.md  constraints.md  index.md  modules.md  windows.md
frontend/: .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  dropCheck.ts  i18n.ts  styles.css  types.ts
frontend/src/components/: AvailabilityPanel.tsx  CalendarPanel.tsx  CatalogPanel.tsx  ChecklistPanel.tsx  CourseForm.tsx  ImportPanel.tsx  PeoplePanel.tsx  RoomBoards.tsx  SchedulesPanel.tsx  WeeklyGrid.tsx
modules/: index.html
raw/: 30.4.26.XLSX  Academic_Year_Schedule.md  catalog_template.csv
search/: search_index.json
windows/: index.html
