[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "schedy"
version = "0.1.0"
description = "Department course-scheduling auto-solver for the Chemical Engineering department"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "ortools>=9.9",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["schedy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
